@@ -6,7 +6,7 @@ Uploaders: Jan Dittberner <jandd@debian.org>,
            Thomas Goirand <zigo@debian.org>,
 Build-Depends: debhelper (>= 9),
                dh-python,
-               openstack-pkg-tools,
+               openstack-pkg-tools (>= 52~),
                python-all,
                python-setuptools,
                python-pbr (>= 1.8),
